# kzblogs

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  docs.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_test.txt  test.py
.github/workflows/: check.yaml  deploy.yml
Downloads/kzblogs-main/: main.py
client/: .env.example  adminMiddleware.ts  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json
client/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
client/components/: AuthorCard.tsx  Bar.tsx  BlogCard.tsx  BlogList.tsx  BookmarkButton.tsx  BookmarkCard.tsx  Button.tsx  ChallengesCard.tsx  Draft.tsx  DraftCard.tsx  Footer.tsx  LikeButton.tsx  Loader.tsx  Navbar.tsx  SearchBar.tsx  Tags.tsx  TrendCard.tsx  TrendingCard.tsx  footer.tsx  index.ts
client/data/: tags.ts
client/example_blog/: new-blog.md
client/mock-data/: ChallengeData.ts  data.ts
client/pages/: LandingPage.tsx  _app.tsx  explore.tsx  index.tsx  login.tsx  signup.tsx
client/styles/: globals.css
client/types/: index.ts
client/utils/: api.ts  crypto.ts  env.ts  (+1 more)
database/: __init__.py  blogs.py  users.py
db/: blogs.py  database.py  users.py
helpers/: constants.py  response.py  schema.py  schemas.py
jwt auth/: jwt.py
middleware/: __init__.py  middleware.py
routes/: admin.py  adminRoutes.py  crudRoutes.py  regularRoutes.py  routes.py  userRoutes.py
security/: bcryptHandler.py  jwtHandler.py
(+42 files in other folders)
