[tool.poetry]
name = "kzblogs"
version = "1.0"
description = "kzilla official blogging website"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
anyio = "3.6.2"
click = "8.1.3"
dnspython = "2.2.1"
fastapi = "0.85.1"
h11 = "0.14.0"
idna = "3.4"
pydantic = "1.10.2"
python-dotenv = "0.21.0"
sniffio = "1.3.0"
starlette = "0.20.4"
typing_extensions = "4.4.0"
uvicorn = "0.19.0"
gunicorn = "20.1.0"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
